-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.2.0 FF
-
None
-
4bdd38534eef385a968016c6759457c766c06565 7ccfa247c5d99450764955be6f72161c2980770c
-
Qt Quick 3D - 2021 Week 33/34
Sharing a scene with embedded 2D content between two windows crashes. Repro by running the attached application.
Found when investigating QDS-4672. The root cause in both is probably related.
Application output:
onecore\windows\directx\database\helperlibrary\lib\directxdatabasehelper.cpp(652)\d3d9.dll!00007FFB01F6B225: (caller: 00007FFB01F6AD2C) ReturnHr(1) tid(6010) 80004002 No such interface supported
qml: Showing the second window
Exception at 0x7ffb13e3d759, code: 0xe06d7363: C++ exception, flags=0x1 (execution cannot be continued) (first chance) in d3d11!D3DKMTWaitForVerticalBlankEvent
D3D11: Removing Device.
Device loss detected in Present()
Graphics device lost, cleaning up scenegraph and releasing RHI
HEAP[QDS-4672.exe]: HEAP: Free Heap block 000002C653D5EE20 modified at 000002C653D5F088 after it was freed
- relates to
-
QTBUG-95755 Support rendering embedded 2d content in multiple windows
-
- Open
-
- resulted from
-
QDS-4672 Puppet crashes sometimes when properties of 2D item embedded in 3D scene are changed
-
- Closed
-
| For Gerrit Dashboard: QTBUG-94969 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 364217,4 | Fix crash when embedded 2d content is rendered in another window | dev | qt/qtquick3d | Status: MERGED | +2 | 0 |
| 365653,2 | Fix crash when embedded 2d content is rendered in another window | 6.2 | qt/qtquick3d | Status: MERGED | +2 | 0 |