Fix crash when embedded 2d content is rendered in another window

Prevent rendering the 2d content in the window that is not the primary
window to prevent a crash. Getting the rendering to work requires more
work.

Task-number: QTBUG-94969
Change-Id: If9d6250c597edf2122b1a126d301e26bc109064a
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Andy Nichols <andy.nichols@qt.io>
(cherry picked from commit 7ccfa247c5d99450764955be6f72161c2980770c)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>